--- a/pages/style.css
+++ b/pages/style.css
@@ -1,27 +1,46 @@
 body {
     background-color: white;
-    }
+    font-family: 'Permanent Marker', cursive;
+}
 
-#imgDiv{
+#imgDiv {
     display: flex;
     justify-content: center;
 }
+
+#imgDiv img {
+    position: absolute;
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+#imgDiv img.top:hover {
+    opacity:0;
+  }
+
 img {
     height: 60vh;
     /* margin-left: 28%; */
 }
-.container{
+
+.container {
     display: flex;
     justify-content: center;
 }
-#btn{
-   border-radius: 15px;
-   background-color: white;
-   border: none;
-   text-transform: uppercase;
-   font-size: 1.5rem;
-   color: black;
+#btns{
+    margin-top: 28%;
 }
-#btn:hover{
+#btn {
+    margin-top: 8%;
+    border-radius: 15px;
+    background-color: white;
+    border: none;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: black;
+}
+
+#btn:hover {
     font-size: 1.85rem;
 }
