--- a/pages/calendar/calendar.css
+++ b/pages/calendar/calendar.css
@@ -35,31 +35,10 @@ nav {
 /* #jumboPic{
 size: cover;
 } */
-#section1 {
+body {
     background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../../images/barbell.jpg);
     background-size: cover;
     background-position-y: 45%;
     height: 100vh;
     z-index: -5;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-
-}
-
-.container {
-    background-image: linear-gradient(rgba(17, 1, 1, 0.226) 0%, rgba(12, 12, 12, 0.377) 20%, transparent 20%);
-    background-color: rgba(0, 0, 0, 0.774);
-    color: rgb(247, 241, 241);
-    height: 45vh;
-    margin-top: 0%;
-    border-radius: 25px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    text-align: center
-}
-
-#mainBody {
-    font-size: 1.5rem;
-    /* background-image: linear-gradient(105deg,rgb(0, 0, 0) 50%, rgba(255, 255, 255, 0.9) 50%, transparent 1000%); */
-    /* -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
 }
