--- a/client/src/pages/landing/landing.css
+++ b/client/src/pages/landing/landing.css
@@ -26,7 +26,7 @@ img {
     font-size: 1.75rem;
 }
 #enter:hover{
-    transform: translateY(12px);
+    color: rgb(3, 152, 211);
 }
 
 .flip-card {
@@ -35,6 +35,7 @@ img {
     height: 75vh;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
+    margin-left: 2%;
     /* Remove this if you don't want the 3D effect */
 }
 
@@ -44,7 +45,7 @@ img {
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 1.5s;
     transform-style: preserve-3d;
 }
 
