--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -5,15 +5,11 @@
 }
 
 #card-holder {
+    justify-content: center;
     text-align: center;
 }
 
 
-/* .button-container {
-    margin-top: 5%;
-    margin-right: 39%;
-    border-color: transparent;
-} */
 #btnCon{
     margin: 0 auto;
     justify-content: center;
@@ -28,6 +24,11 @@
     border-color: transparent;
     font-size: 1.75rem;
 }
+@media (max-width: 70em) {
+    #enter {
+        width: 85vw;
+    }
+}
 #enter:hover{
     color: rgb(3, 152, 211);
 }
@@ -38,11 +39,9 @@
     height: 75vh;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
-    margin-left: 2%;
-    /* Remove this if you don't want the 3D effect */
+    
 }
 
-/* This container is needed to position the front and back side */
 .flip-card-inner {
     position: relative;
     width: 100%;
@@ -52,11 +51,13 @@
     transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+.flip-card .flip-card-inner {
+    animation-delay: 5s;
+animation:spinFast 5s infinite;
 }
-
+/* .flip-card:hover .flip-card-inner {
+    animation: none;
+    } */
 /* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
@@ -64,6 +65,26 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+}
+
+#card-holder{
+    animation: spin 5s 1;
+}
+@keyframes spinFast {
+    0%  {-webkit-transform: rotateY(0deg);}
+    100% {-webkit-transform: rotateY(360deg);}   
+}
+@-webkit-keyframes spinFast {
+    0%  {-webkit-transform: rotateY(0deg);}
+    100% {-webkit-transform: rotateY(360deg);}   
+}
+@keyframes spin {
+	0%  {-webkit-transform: rotate(0deg);}
+	100% {-webkit-transform: rotate(360deg);}	
+}
+@-webkit-keyframes spin {
+	0%  {-webkit-transform: rotate(0deg);}
+	100% {-webkit-transform: rotate(360deg);}	
 }
 
 /* Style the front side (fallback if image is missing) */
