--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -7,6 +7,7 @@
 #card-holder {
     justify-content: center;
     text-align: center;
+    margin-top: 3%;
 }
 
 
@@ -23,6 +24,7 @@
     background-color: transparent;
     border-color: transparent;
     font-size: 1.75rem;
+    margin-left: 4%;
 }
 @media (max-width: 70em) {
     #enter {
