--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -1,35 +1,65 @@
 #section3 {
-    background-image: url(../images/babyrino.jpg);
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: center;
-    ;
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/collage.jpg);
+    background-size: cover;
+    background-position-y: 0%;
+    height: 100vh;
     z-index: -5;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 0%;
+    padding-top: 1%;
     margin-top: 0%;
 }
 
 #sectionStore {
     /* background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/power.jpg); */
-    background-size: auto;
-    background-color: rgba(0, 0, 0, 0.527);
-    background-position-y: 0%;
-    height: 75rem;
-    width: 200vw;
-    z-index: 0;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 5%;
-    margin-top: 3%;
-    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.5);
     overflow-y: scroll;
+    height: 100%;
+    margin-top: 0%;
+    border-radius: 15px;
+    padding-top: 5%;
+    padding-bottom: 20%;
 }
 
-.storeCard {
+#sectionStore::-webkit-scrollbar {
+    width: 0 !important
+}
+
+#sectionStore {
+    overflow: -moz-scrollbars-none;
+}
+
+#sectionStore {
+    -ms-overflow-style: none;
+}
+
+#sectionStore:hover {
+    background-color: rgba(0, 0, 0, 0.856);
+}
+
+#storeCard {
     margin-left: 24%;
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
 }
 
-.storeCard:hover {
+@media (max-width: 70em) {
+
+    #storeCard {
+        margin-left: 0%;
+    }
+
+    #section3 {
+        background-size: 200vh;
+        background-position-x: 42%;
+    }
+
+    #sectionStore {
+        width: 100%;
+        padding-left: 20%;
+    }
+}
+
+#storeCard:hover {
     -webkit-transform: scale(1.15, 1.15);
     transform: scale(1.15, 1.15);
     box-shadow: 0 0 15px rgb(3, 152, 211);
@@ -71,14 +101,15 @@
     color: black;
 }
 
-#ppform{
+#ppform {
     margin: 0 auto;
     display: grid;
 }
-#ppImg{
+
+#ppImg {
     margin-top: 2%;
 }
 
-#pp1{
+#pp1 {
     margin: 9px auto;
 }
