--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -30,6 +30,10 @@
     #enter {
         width: 85vw;
     }
+    .flip-card .flip-card-inner {
+        animation-delay: 5s;
+        animation:spinFast 5s 1;
+    }
 }
 #enter:hover{
     color: rgb(3, 152, 211);
@@ -41,7 +45,7 @@
     height: 75vh;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
-    
+    border: none !important;    
 }
 
 .flip-card-inner {
@@ -53,9 +57,8 @@
     transform-style: preserve-3d;
 }
 
-.flip-card .flip-card-inner {
-    animation-delay: 5s;
-animation:spinFast 5s infinite;
+.flip-card:hover .flip-card-inner {
+    animation:spinFast 5s 1;
 }
 /* .flip-card:hover .flip-card-inner {
     animation: none;
@@ -67,11 +70,13 @@ animation:spinFast 5s infinite;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    border: none !important;
+
 }
 
-#card-holder{
-    animation: spin 5s 1;
-}
+/* #card-holder:hover{
+    animation:spinFast 5s infinite;
+} */
 @keyframes spinFast {
     0%  {-webkit-transform: rotateY(0deg);}
     100% {-webkit-transform: rotateY(360deg);}   
