--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -1,17 +1,18 @@
 #section3 {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/collage.jpg);
+    background-image: linear-gradient(90deg, rgba(15, 0, 0, 0.26) 0%, rgba(43, 199, 247, 0.815) 50%,rgba(43, 199, 247, 0.815) 60%, rgba(15, 0, 0, 0.26) 100%, transparent 50%);
     background-size: cover;
     background-position-y: 0%;
-    height: 100vh;
+    height: 200vh;
+    width: 100vw;
     z-index: -5;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 1%;
+    padding-top: 0%;
     margin-top: 0%;
+    background-color: black;
 }
 
 #sectionStore {
-    /* background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/power.jpg); */
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: transparent;
     overflow-y: scroll;
     height: 100%;
     margin-top: 0%;
@@ -33,35 +34,42 @@
 }
 
 #sectionStore:hover {
-    background-color: rgba(0, 0, 0, 0.856);
+    background-image: linear-gradient(90deg, rgba(15, 0, 0, 0.137) 0%, rgba(0, 5, 7, 0.767) 50%,rgba(0, 5, 7, 0.658) 60%, rgba(15, 0, 0, 0.137) 100%, transparent 50%);
 }
 
 #storeCard {
-    margin-left: 24%;
     margin-top: 2.5%;
     margin-bottom: 2.5%;
+    margin-left: 23%;
+
 }
 
 @media (max-width: 70em) {
 
     #storeCard {
         margin-left: 0%;
+        margin-top: 4%;
+        margin-bottom: 4%;
     }
 
     #section3 {
         background-size: 200vh;
         background-position-x: 42%;
+        height: 290vh;
+        padding-right: 12%;
     }
 
     #sectionStore {
         width: 100%;
         padding-left: 20%;
+        overflow-y: visible;
+
     }
 }
 
 #storeCard:hover {
-    -webkit-transform: scale(1.15, 1.15);
-    transform: scale(1.15, 1.15);
+    -webkit-transform: scale(1.15, 1.05);
+    transform: scale(1.15, 1.05);
     box-shadow: 0 0 15px rgb(3, 152, 211);
 
 }
