Footer added, landing page nailed down, mobile for store and others is set sans the form and scroll issue which may be fixed based on client needs anyways. calendar and email pending nicks sending of documents and pricing

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -57,8 +57,11 @@
     transform-style: preserve-3d;
 }
 
-.flip-card:hover .flip-card-inner {
+.flip-card .flip-card-inner {
     animation:spinFast 5s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1.5s;
+
 }
 /* .flip-card:hover .flip-card-inner {
     animation: none;
@@ -79,20 +82,20 @@
 } */
 @keyframes spinFast {
     0%  {-webkit-transform: rotateY(0deg);}
-    100% {-webkit-transform: rotateY(360deg);}   
+    100% {-webkit-transform: rotateY(180deg);}   
 }
 @-webkit-keyframes spinFast {
     0%  {-webkit-transform: rotateY(0deg);}
-    100% {-webkit-transform: rotateY(360deg);}   
+    100% {-webkit-transform: rotateY(180deg);}   
 }
-@keyframes spin {
+/* @keyframes spin {
 	0%  {-webkit-transform: rotate(0deg);}
-	100% {-webkit-transform: rotate(360deg);}	
+	100% {-webkit-transform: rotate(180deg);}	
 }
 @-webkit-keyframes spin {
 	0%  {-webkit-transform: rotate(0deg);}
-	100% {-webkit-transform: rotate(360deg);}	
-}
+	100% {-webkit-transform: rotate(180deg);}	
+} */
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
