--- a/src/pages/schedule/schedule.css
+++ b/src/pages/schedule/schedule.css
@@ -10,17 +10,17 @@
     background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/collage.jpg);
     background-size: cover;
     background-position-y: 0%;
-    height: 100vh;
+    height: 200vh;
     z-index: -5;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 1%;
+    padding-top: 0%;
     margin-top: 0%;
 }
 
 #scheduleContainer {
     background-color: rgba(0, 0, 0, 0.5);
     overflow-y: scroll;
-    height: 100vh;
+    height: 100%;
     margin-top: 0%;
     border-radius: 15px;
 }
