--- a/src/pages/components/footer.css
+++ b/src/pages/components/footer.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Teko&display=swap');
 
 #insta{
-    color: white;
+    color: black;
     font-size: 2.5rem;
-    margin-top: 12%;
+    /* margin-top: 12%; */
 }
 #insta:hover{
     transform: scale(1.1);
@@ -13,7 +13,7 @@
 #footText{
     font-size: 1.25rem;
     line-height: 25px;
-    color: white;
+    color: black;
     font-family: 'Teko', sans-serif;
 }
 #footText:hover{
@@ -22,7 +22,6 @@
 
 }
 #footCon{
-    background-color: black;
+    background-color: white;
     height: 25vw;
-    margin-top: -15%;
 }
