--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -13,7 +13,7 @@ size: cover;
     height: 100vh;
     z-index: -5;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 5%;
+    padding-top: 0%;
     margin-top: 0%;
 }
 
@@ -22,9 +22,9 @@ size: cover;
     background-color: rgba(0, 0, 0, 0.774);
     color: rgb(247, 241, 241);
     height:100vh;
-    width: 95vw;
+    width: 100vw;
     margin-top: 0%;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     background-size: 100%;
     background-repeat: no-repeat;
     text-align: center;
@@ -41,12 +41,12 @@ size: cover;
     -webkit-text-fill-color: transparent; */
 }
 @media (max-width: 70em) {
-    body {
-        /* background-color: black; */
-    }
+    
     #section1{
         background-size: 200vh;
-        background-position-x: -1%;
-
+        background-position-x: 0%;
+    }
+    #container1{
+        width: 100vw;
     }
 }
