--- a/src/pages/results/results.css
+++ b/src/pages/results/results.css
@@ -7,14 +7,21 @@
     /* background-color: rgb(0, 0, 0); */
     background-position-y: 0%;
     height: 50rem;
+    width:95%;
     animation: colorfade1 20s ease-in infinite;
     z-index: 0;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
     padding-top: 1%;
-    margin-top: 0%;
+    margin: 0 auto;
     border-radius: 25px;
 }
 
+/* #coverflow__arrow1__2X2XF  {
+position: absolute;
+}
+.coverflow__arrow__IDi7v{
+    position: absolute; */
+/* } */
 @-webkit-keyframes colorfade1 {
     0%     {background-color:black;}
     20%     {background-color:rgb(0, 37, 48);}
@@ -29,7 +36,7 @@
 }
 
 @keyframes colorfade1 {
-    {background-color:black;}
+    0%     {background-color:black;}
     20%     {background-color:rgb(0, 37, 48);}
     30%     {background-color:rgb(4, 51, 90);}
     40%     {background-color:rgb(14, 53, 104);}
