--- a/src/pages/results/results.css
+++ b/src/pages/results/results.css
@@ -1,13 +1,13 @@
-#carouselPic {
+/* #carouselPic {
     height: 35vh;
-}
+} */
 
 #sectionResults {
     background-size: auto;
     /* background-color: rgb(0, 0, 0); */
     background-position-y: 0%;
-    height: 50rem;
-    width:95%;
+    height: 55rem;
+    width: 95%;
     animation: colorfade1 20s ease-in infinite;
     z-index: 0;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
@@ -15,35 +15,105 @@
     margin: 0 auto;
     border-radius: 25px;
 }
-
-/* #coverflow__arrow1__2X2XF  {
-position: absolute;
+.carousel-item>img {
+    height: 900px;
+    width: 100%;
 }
-.coverflow__arrow__IDi7v{
-    position: absolute; */
-/* } */
+
+@media (max-width: 70em) {
+    #sectionResults {
+        height: 31rem;
+    }
+
+    .carousel-item>img {
+        height: 500px;
+        width: 400px;
+    }
+}
+
+
 @-webkit-keyframes colorfade1 {
-    0%     {background-color:black;}
-    20%     {background-color:rgb(0, 37, 48);}
-    30%     {background-color:rgb(4, 51, 90);}
-    40%     {background-color:rgb(14, 53, 104);}
-    50.0%  {background-color:rgb(3, 152, 211);} /* your chosen 'mid' color */
-    60%     {background-color:rgb(3, 152, 211);}
-    70%     {background-color:rgb(2, 44, 92);}
-    80%     {background-color:rgb(0, 2, 12);}
-    90%     {background-color:rgb(14, 53, 104);}
-    100.0%  {background-color:rgb(3, 152, 211);}
+    0% {
+        background-color: black;
+    }
+
+    20% {
+        background-color: rgb(0, 37, 48);
+    }
+
+    30% {
+        background-color: rgb(4, 51, 90);
+    }
+
+    40% {
+        background-color: rgb(14, 53, 104);
+    }
+
+    50.0% {
+        background-color: rgb(3, 152, 211);
+    }
+
+    /* your chosen 'mid' color */
+    60% {
+        background-color: rgb(3, 152, 211);
+    }
+
+    70% {
+        background-color: rgb(2, 44, 92);
+    }
+
+    80% {
+        background-color: rgb(0, 2, 12);
+    }
+
+    90% {
+        background-color: rgb(14, 53, 104);
+    }
+
+    100.0% {
+        background-color: rgb(3, 152, 211);
+    }
 }
 
 @keyframes colorfade1 {
-    0%     {background-color:black;}
-    20%     {background-color:rgb(0, 37, 48);}
-    30%     {background-color:rgb(4, 51, 90);}
-    40%     {background-color:rgb(14, 53, 104);}
-    50.0%  {background-color:rgb(3, 152, 211);} /* your chosen 'mid' color */
-    60%     {background-color:rgb(3, 152, 211);}
-    70%     {background-color:rgb(2, 44, 92);}
-    80%     {background-color:rgb(0, 2, 12);}
-    90%     {background-color:rgb(14, 53, 104);}
-    100.0%  {background-color:rgb(3, 152, 211);}
+    0% {
+        background-color: black;
+    }
+
+    20% {
+        background-color: rgb(0, 37, 48);
+    }
+
+    30% {
+        background-color: rgb(4, 51, 90);
+    }
+
+    40% {
+        background-color: rgb(14, 53, 104);
+    }
+
+    50.0% {
+        background-color: rgb(3, 152, 211);
+    }
+
+    /* your chosen 'mid' color */
+    60% {
+        background-color: rgb(3, 152, 211);
+    }
+
+    70% {
+        background-color: rgb(2, 44, 92);
+    }
+
+    80% {
+        background-color: rgb(0, 2, 12);
+    }
+
+    90% {
+        background-color: rgb(14, 53, 104);
+    }
+
+    100.0% {
+        background-color: rgb(3, 152, 211);
+    }
 }
