purchase of training moved to schedule from store, componenets added

--- a/src/pages/results/results.css
+++ b/src/pages/results/results.css
@@ -6,8 +6,8 @@
     background-size: auto;
     /* background-color: rgb(0, 0, 0); */
     background-position-y: 0%;
-    height: 55rem;
-    width: 95%;
+    height: 45rem;
+    width: 70%;
     animation: colorfade1 20s ease-in infinite;
     z-index: 0;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
@@ -16,13 +16,15 @@
     border-radius: 25px;
 }
 .carousel-item>img {
-    height: 900px;
+    height: 750px;
     width: 100%;
+    margin: 0 auto;
 }
 
 @media (max-width: 70em) {
     #sectionResults {
         height: 31rem;
+        width: 95%;
     }
 
     .carousel-item>img {
