cards added for book training, looks clean, coaches route and base layout added.

--- a/src/pages/schedule/schedule.css
+++ b/src/pages/schedule/schedule.css
@@ -6,23 +6,17 @@
 }
 
 
-#sectionSchedule {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/collage.jpg);
-    background-size: cover;
-    background-position-y: 0%;
-    height: 212vh;
-    z-index: -5;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 0%;
-    margin-top: 0%;
-}
-
 #scheduleContainer {
-    background-color: rgba(0, 0, 0, 0.856);
-    overflow-y: scroll;
+    background-image: linear-gradient(#202020d5, #1391b8b7);
+    /* overflow-y: scroll; */
     height: 100%;
     margin-top: 0%;
     border-radius: 15px;
+    padding-bottom: 2%;
+    margin-bottom: 2%;
+}
+.calendarText{
+    text-align: center;
 }
 
 #scheduleContainer::-webkit-scrollbar {
@@ -46,11 +40,11 @@
     text-align: center;
     color: black;
     background-image: linear-gradient(#20202052, #34abcf65)
-    /* background-size: 20rem;
+        /* background-size: 20rem;
     background-repeat: repeat-x;
     background-position-y: 50%;
     background-position-x: 50%; */
-    /* background-image: linear-gradient(#2020209f, #68acecbb), url(../images/babyrino.jpg); */
+        /* background-image: linear-gradient(#2020209f, #68acecbb), url(../images/babyrino.jpg); */
 }
 
 #calendarContainer {
@@ -82,10 +76,6 @@ body::-webkit-scrollbar-thumb {
         color: white;
     }
 
-    #sectionSchedule {
-        background-size: 200vh;
-        background-position-x: 0%;
-    }
 
     #calendarContainer {
         width: 100%;
