--- a/src/pages/results/results.css
+++ b/src/pages/results/results.css
@@ -6,7 +6,7 @@
     background-size: auto;
     /* background-color: rgb(0, 0, 0); */
     background-position-y: 0%;
-    height: 45rem;
+    height: 54rem;
     width: 70%;
     animation: colorfade1 20s ease-in infinite;
     z-index: 0;
@@ -14,6 +14,7 @@
     padding-top: 1%;
     margin: 0 auto;
     border-radius: 25px;
+    margin-bottom: 4%;
 }
 .carousel-item>img {
     height: 750px;
@@ -23,13 +24,13 @@
 
 @media (max-width: 70em) {
     #sectionResults {
-        height: 31rem;
+        height: 35rem;
         width: 95%;
     }
 
     .carousel-item>img {
         height: 500px;
-        width: 400px;
+        width: 100%;
     }
 }
 
