--- a/src/pages/schedule/schedule.css
+++ b/src/pages/schedule/schedule.css
@@ -15,7 +15,8 @@
     padding-bottom: 2%;
     margin-bottom: 2%;
 }
-.calendarText{
+
+.calendarText {
     text-align: center;
 }
 
@@ -67,6 +68,38 @@ body::-webkit-scrollbar-thumb {
 
 #form:hover {
     color: white;
+}
+
+#onlineTrainingContainer {
+    background-color: rgba(0, 0, 0, 0.164);
+    padding: 15px;
+    border-radius: 25px;
+    text-align: center;
+}
+
+.trainingText {
+    color: white;
+}
+
+#inPersonTrainingContainer {
+    background-color: rgba(0, 0, 0, 0.164);
+    padding: 15px;
+    border-radius: 25px;
+    text-align: center;
+    margin-bottom: 2rem;
+    height: fit-content;
+    color: black;
+}
+
+.inPersonPurchase {
+    justify-content: center;
+    color: white;
+    display: inline-block;
+    font-size: 1.25rem;
+}
+
+#ppTrainingForm:hover {
+    color: rgb(3, 152, 211);
 }
 
 @media (max-width: 70em) {
