--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -18,12 +18,12 @@
 
     65% {
         visibility: visible;
-        opacity: 0.80;
+        opacity: 0.88;
     }
 
     85% {
         visibility: visible;
-        opacity: 0.75;
+        opacity: 0.85;
     }
 
     100% {
@@ -52,6 +52,7 @@
 .container {
     max-width: 100%;
     padding: 0%;
+    margin: 0;
 }
 
 #openingScene {
@@ -105,20 +106,12 @@
     margin-left: 4%;
 }
 
-/* @media (max-width: 70em) {
-    #enter {
-        width: 85vw;
-    }
 
-    .flip-card .flip-card-inner {
-        animation-delay: 5s;
-        animation: spinFast 5s 1;
-    }
-} */
 
 #enter:hover {
     color: rgb(3, 152, 211);
 }
+
 
 .strobe {
     /* background-image: url('../images/staticbg.jpg'); */
@@ -143,51 +136,36 @@
     }
 }
 
-
-
-/* $chars : 10;
-$duration : .25s;
-$bounce : cubic-bezier(.4,1.4,.75,.9);
-$scale : 5000;
-
-// html, body { 
-//   height: 100%;
-//   overflow: hidden;
-//   user-select: none;
-// }
-
-// body {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   background: radial-gradient(#1a1a1a, #000);
-// }
-
-// h1 {
-//   font: 300 50px/1 courier;
-//   white-space: nowrap;
-//   color: whitesmoke;
-// } */
-
-span {
-  display: inline-block;
-  animation: stretch $chars*$duration $bounce infinite;
-  transform-origin: center; 
-}
-
-@for $i from 1 through $chars {
-    &:nth-of-type(#{$i}) {
-      animation-delay: $i*$duration;
+@media (max-width: 70em) {
+    #enter {
+        width: 85vw;
     }
-  }
-  
-@keyframes stretch {
-  5% { 
-    transform: scaleX($scale);
-    opacity: .1;
-  }
-  15% { 
-    transform: scaleX(1);
-    opacity: 1;
-  }
+
+   
+    #rhinoHolder{
+        width: 20vw;
+    }
+
+    #openingScene {
+        /* height: 100vh; */
+        width: 100vw;
+        margin: 0 auto;
+    }
+    #landingRhino{
+        height: 42vh;
+        padding-left: 6%;
+    }
+    #crazyText {
+        width: 50vw;
+        margin: 0 auto;
+    }
+
+    #landingImg {
+        height: 52vh;
+        padding-top: 25%;
+    }
+    .strobe{
+        font-size: 2.2rem;
+    }
+
 }
