updates in progress

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: 'Teko', sans-serif;
     height: 100%;
     width: 100%;
@@ -6,11 +6,16 @@ body{
     padding: 0;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 /* #jumboPic{
 size: cover;
 } */
 #section1 {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.26) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../images/collage.jpg);
+    background-image: url(../images/collage.jpg);
     background-size: cover;
     background-position-y: 0%;
     height: 100vh;
@@ -20,36 +25,107 @@ size: cover;
     margin-top: 0%;
 }
 
+#homeTextController {
+    width: 70vw;
+    text-align: center;
+    margin: 0 auto;
+}
+
 .container1 {
     background-image: linear-gradient(rgba(17, 1, 1, 0.226) 0%, rgba(12, 12, 12, 0.377) 20%, transparent 20%);
     background-color: rgba(0, 0, 0, 0.774);
     color: rgb(247, 241, 241);
-    height:100vh;
+    height: 100vh;
     width: 100vw;
     margin-top: 0%;
+    padding-top: 20vh;
     /* border-radius: 25px; */
     background-size: 100%;
     background-repeat: no-repeat;
     text-align: center;
     margin: 0 auto;
 }
+
 /* .container1:hover {
     background-color:  rgba(0, 0, 0, 0.856);
 } */
 
 #mainBody {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     /* background-image: linear-gradient(105deg,rgb(0, 0, 0) 50%, rgba(255, 255, 255, 0.9) 50%, transparent 1000%); */
     /* -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; */
 }
-@media (max-width: 70em) {
-    
-    #section1{
+
+#header {
+    font-size: 5rem;
+    text-shadow: 1px 1px 2px rgb(0, 174, 255), 0 0 1em rgb(1, 1, 17), 0 0 0.2em rgb(0, 174, 255);
+}
+
+#subHeader {
+    color: rgb(3, 0, 0);
+    text-shadow: 2px 5px 5px rgb(3, 83, 121), 0 0 1em rgb(245, 245, 248), 0 0 0.2em rgb(0, 195, 255);
+    animation: pulse2 10s infinite;
+}
+
+.homepageLink:hover {
+    text-decoration: none;
+    background-color: transparent;
+}
+
+#subHeader:hover {
+    color: rgb(3, 152, 211);
+
+}
+
+@media screen and (max-width: 70em) {
+
+    #section1 {
         background-size: 200vh;
         background-position-x: 0%;
+        overflow-y: visible;
     }
-    #container1{
+
+    .container1 {
         width: 100vw;
+        padding-top: 0%;
+    }
+
+    #homeTextController {
+        height: 100vh;
+    }
+
+    #header {
+        font-size: 3.5rem;
+    }
+
+    #mainBody {
+        font-size: 1.5rem;
+    }
+}
+
+
+@-webkit-keyframes pulse2 {
+    0% {
+        text-shadow: 2px 5px 5px rgb(3, 83, 121), 0 0 1em rgb(245, 245, 248), 0 0 0.2em rgb(5, 194, 252);
+    }
+
+    50% {
+        text-shadow: 2px 5px 5px rgb(238, 241, 243), 0 0 1em rgb(5, 194, 252), 0 0 0.2em rgb(0, 5, 7);
+    }
+    100% {
+        text-shadow: 2px 5px 5px rgb(3, 83, 121), 0 0 1em rgb(245, 245, 248), 0 0 0.2em rgb(5, 194, 252);
+    }
+}
+@keyframes pulse2 {
+    0% {
+        text-shadow: 2px 5px 5px rgb(3, 83, 121), 0 0 1em rgb(245, 245, 248), 0 0 0.2em rgb(5, 194, 252);
+    }
+
+    50% {
+        text-shadow: 2px 5px 5px rgb(238, 241, 243), 0 0 1em rgb(5, 194, 252), 0 0 0.2em rgb(0, 5, 7);
+    }
+    100% {
+        text-shadow: 2px 5px 5px rgb(3, 83, 121), 0 0 1em rgb(245, 245, 248), 0 0 0.2em rgb(5, 194, 252);
     }
 }
