--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -1,4 +1,4 @@
-#section3 {
+/* #section3 {
     background-image: linear-gradient(90deg, rgba(15, 0, 0, 0.26) 0%, rgba(43, 199, 247, 0.815) 50%,rgba(43, 199, 247, 0.815) 60%, rgba(15, 0, 0, 0.26) 100%, transparent 50%);
     background-size: cover;
     background-position-y: 0%;
@@ -9,8 +9,12 @@
     padding-top: 0%;
     margin-top: 0%;
     background-color: black;
-}
+} */
 
+.underConstruction{
+    text-align: center;
+    padding-top: 5%;
+}
 #sectionStore {
     background-color: transparent;
     overflow-y: scroll;
