--- a/src/pages/schedule/schedule.css
+++ b/src/pages/schedule/schedule.css
@@ -88,7 +88,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #inPersonTrainingContainer {
-    background-color: rgba(0, 0, 0, 0.164);
+    background-color: rgba(255, 255, 255, 0.555);
     padding: 15px;
     border-radius: 25px;
     text-align: center;
@@ -107,8 +107,25 @@ body::-webkit-scrollbar-thumb {
 #ppTrainingForm:hover {
     color: rgb(3, 152, 211);
 }
+#salesContainer{
+    background-color: rgba(255, 255, 255, 0.555);
+    border-radius: 25px;
+}
+.salesHeader{
+    font-size: 3.85rem;
+}
+.salesBody{
+    font-size: 1.85rem;
+    text-align: center;
+}
+.salesLinks{
+    text-align: center;
+}
+.salesBody ul{
+    list-style: none;
+}
 
-@media (max-width: 70em) {
+@media screen and (max-width: 70em) {
 
     #form {
         padding-bottom: 20%;
