--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -1,15 +1,4 @@
-/* #section3 {
-    background-image: linear-gradient(90deg, rgba(15, 0, 0, 0.26) 0%, rgba(43, 199, 247, 0.815) 50%,rgba(43, 199, 247, 0.815) 60%, rgba(15, 0, 0, 0.26) 100%, transparent 50%);
-    background-size: cover;
-    background-position-y: 0%;
-    height: 200vh;
-    width: 100vw;
-    z-index: -5;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-    padding-top: 0%;
-    margin-top: 0%;
-    background-color: black;
-} */
+
 
 .underConstruction{
     text-align: center;
@@ -17,7 +6,7 @@
 }
 #sectionStore {
     background-color: transparent;
-    /* overflow-y: scroll; */
+
     height: 100%;
     margin-top: 0%;
     border-radius: 15px;
@@ -87,6 +76,7 @@
 }
 
 #storeImg {
+    width: 100%;
     height: 25vh;
 
 }
