--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -68,7 +68,8 @@
 
 .storeBtn {
     font-family: 'Permanent Marker', cursive;
-    height: 15vh;
+    /* height: 15vh; */
+    width: 90%;
 }
 
 .storeBtn:hover {
@@ -104,7 +105,7 @@
 
 #ppform {
     margin: 0 auto;
-    display: grid;
+    display: inline-block;
 }
 
 #ppImg {
@@ -113,4 +114,13 @@
 
 #pp1 {
     margin: 9px auto;
+}
+
+.paypalForm{
+display: inline-block;
+
+}
+.ppButtonSpacer{
+    margin-top: 2%;
+
 }
